parslers-benchmark/src/tests/invalid/semanticErr/variables/caseMatters.wacc
# variable names are case sensitive

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin

  int number = 42 ;
  println NUMBER
  
end
